Nearing the end of the report and making final touches. Will need to start  cutting some content or moving them to appendix to get under the 10k word limit.

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -141,7 +141,7 @@
 \begin{center}
 \thispagestyle{empty}  
 \vspace*{\fill}
-\textit{I would like to dedicate this report to my family, friends and lecturers who have supported me throughout my degree}
+\textit{This report is dedicated to my family, friends and lecturers who have supported me throughout my degree}
 \vspace*{\fill}
 \end{center}
 
@@ -151,18 +151,16 @@
 \section*{Abstract}
 Computer graphics is a rapidly growing field that is vital in many industries
 that rely on digital graphics including scientific research, simulations,
-education and training, entertainment and more. The flexibility of this field
-and the increase in computing resources is what makes it so powerful and
-provides real-world benefits in ways not previously observed before the use of
-graphics software.
+education and training, entertainment and more. The flexibility and increase of
+computing resources provide real-world benefits in ways not previously observed
+before the use of computer imagery.
 
-This report presents my final year project an application built from the ground
-up using the latest technologies for 3D graphics rendering. Its goal is to be
-easy to use, and performant and include a collection of tools for graphics
-manipulation that users can take advantage of when designing and building
-virtual environments. It is intended to serve as an important application that
-bridges the gap between inexperienced users and industry-leading rendering
-engines.
+This report presents my final year project an application built using the latest
+technologies as a learning tool for 3D model rendering. Its goal is to be easy
+to use, performant and provide a collection of tools for graphics manipulation
+that users can take advantage of when designing and building virtual
+environments. It's intended to serve as an important application that bridges
+the gap between inexperienced users and industry-leading rendering engines.
 
 \pagebreak
 
@@ -215,7 +213,7 @@ computer graphics provide to the real world.
 Industrial graphics software today are large and highly technical applications
 that are the culmination of decades worth of work. Examples include Unreal
 Engine \cite{unreal_engine}, Unity \cite{unity} and RenderMan \cite{render_man}.
-These applications provide users with innovative technology such as ray tracing,
+These applications provide users with innovative technologies such as ray tracing,
 real-time global illumination, subsurface scattering, geometry compression,
 streaming and much more that are designed for use in professional environments
 which results in stringent requirements and complex feature sets.
@@ -296,9 +294,9 @@ required for the design and implementation stages.
     application to include a custom model format that makes use of encryption to
     safely secure a user's digital assets. The motivation for this functionality
     formed as a result of the increase in theft regarding digital assets. A
-    recent example relates to the recent data leak that affected Rockstar
-    Studios and their upcoming game (Grand Theft Auto 6) that saw assets, source
-    code and documentation released to the public \cite{gta_leak}.
+    recent example is the data leak that affected Rockstar Studios and their
+    upcoming game (Grand Theft Auto 6) which saw assets, source code and
+    documentation released to the public \cite{gta_leak}.
 
 \end{description}
 
@@ -331,12 +329,12 @@ to be implemented to achieve the aims outlined in section \ref{aims}.
     only unlock them using a special key that only the user will know. This
     ensures that in the event of digital assets begin obtained by third parties,
     they cannot be used. This requires several key elements to work in tandem to
-    achieve this aim.
+    achieve this objective.
     
-    The raw model must be able to be encrypted using different types of encryption
-    algorithms. In addition to this, \gls*{vmve} must include a parser that can read
-    the internal structure of the encrypted file format and successfully load the
-    model into the application.
+    The raw model must be able to be encrypted using different types of
+    encryption algorithms. In addition to this, the application will need to
+    include a parser that can read the internal structure of the encrypted file
+    format and successfully load the model into the application.
 \end{description}
 
 
@@ -358,7 +356,7 @@ as part of the requirements for milestone 2.
 \subsection{Considerations}
 With the aims and objectives fully defined, important considerations must be
 taken into account before commencing work on the application. These include
-legal, social and ethical considerations.
+legal and ethical considerations.
 
 \subsubsection{Legal}
 The legality of \gls*{vmve} is one of the most important considerations that
@@ -381,12 +379,12 @@ set of features and functionality that require legal clarification.
     rendering settings, lighting, translation, rotation and scaling. 
 
   \item[Personal information] 
-    Finally, the application does not store or process any personal information.
-    Furthermore, it will not contain any networking functionality. This ensures
-    that all data remains local to the application and the user's device.
-    Therefore, \gls*{gdpr} has not been taken into consideration. In the future,
-    however, if the use of data and information changes then this will be
-    revisited to ensure that all laws are adhered to. 
+    Finally, the application does not store or process any personal information
+    and will also not contain any networking functionality. This means that all
+    data remains local to the application and the user's device. Therefore,
+    \gls*{gdpr} will not need to be take into account. In the future, however,
+    if the use of data and information changes then this will be revisited to
+    ensure that all laws are adhered to. 
 \end{description}
 
 The source code for the project will not be publicly available throughout the
@@ -396,16 +394,15 @@ code can be used without restriction allowing for it to be copied, modified as
 well as distributed.
 
 \subsubsection{Ethical}
-One of the main ethical considerations that must be taken into account is the
-computation that the application will perform internally. The technical
-implementation details are not accessible to users as the source code is not
-open source. Therefore, individuals do not know exactly what the software is
-doing during runtime.
+One of the main ethical considerations is the computation that the application
+will perform internally. The technical implementation details are not accessible
+to users as the source code is not open source. Therefore, individuals do not
+know exactly what the software is doing during runtime.
 
 To ensure that \gls*{vmve} remains ethical, the application will not perform any
 additional computations that are not strictly required for 3D rendering.
 Furthermore, the application will not store or send any data as this is not
-required.
+required and would fall outside the scope of its initial aims and objectives.
 
 Another ethical consideration is the use of deceptive design also known as
 ``Dark patterns'' that refers to designs/tricks that manipulate users into
@@ -415,36 +412,36 @@ extra effort will be spent on ensuring that no such design pattern is
 introduced. This will greatly benefit users and their overall user experience.
 
 \subsection{BSc Justification}
-The development of \gls*{vmve} is an ambitious and challenging project that
-requires a strong understanding of computer graphics, programming, and software
-architecture. This project is a large undertaking that uses the skills and
-knowledge gained through the BSc (Bachelor of Science) computer science program
-from modules such as software development (1, 2, 3), algorithms, data science,
-cybersecurity and mathematics. Not only does it showcase technical ability but
-also highlights critical thinking, problem-solving, decision-making and time
-management skills. As a result, they will be highly valued in the professional
-industry and necessary for success in the field of computer science and
-therefore, is a suitable choice for a final-year project.
+This project is ambitious and challenging that requires a strong understanding
+of computer graphics, programming, and software architecture. It is a large
+undertaking that uses the skills and knowledge gained through the BSc (Bachelor
+of Science) computer science program from modules such as software development
+(1, 2, 3), algorithms, data science, cybersecurity and mathematics. Not only
+does it showcase technical ability but also highlights critical thinking,
+problem-solving, decision-making and time management skills. As a result, they
+will be highly valued in the professional industry and necessary for success in
+the field of computer science and therefore, is a suitable choice for a
+final-year project.
 
 \subsection{Overview}
 This report is structured such that it presents each aspect of the development
 in chronological order. There are a total of four key sections in this report:
 \begin{description}
-  \item[Technology review (\ref{technology_review})] This section will cover the
-    different technologies that could be potentially used throughout the
-    development and outlines the advantages and disadvantages of each one. This
-    will lay the foundation for the design section.
+  \item[Technology review (\ref{technology_review})] Covers the different
+    technologies that could be potentially used throughout the development and
+    outlines the advantages and disadvantages of each. This will lay the
+    foundation for the design section.
   \item[Design (\ref{design})] Focuses on the concept of the project, the design
     of the requirements obtained during the requirements-gathering stage
-    followed by the design of the application such as the tools going to be used
-    and the user interface and internal engine architecture.
-  \item[Implementation (\ref{implementation})] Will take the proposed designs
-    and consist of the development of the application as well as presenting the
-    technical implementation details/decisions.
-  \item[Conclusion (\ref{conclusion})] comes after the implementation and
-    reflects on the project to ensure that the application has met the aims and
-    objectives originally set out. Furthermore, it discusses the specific
-    features that will need to be implemented going forward.
+    followed by the design of the application such as the tools going to be
+    used, user interface and engine architecture.
+  \item[Implementation (\ref{implementation})] Takes the proposed designs and
+    consist of the development of the application as well as presenting the
+    technical implementation details and decisions.
+  \item[Conclusion (\ref{conclusion})] Reflects on the project to ensure that
+    the application has met the aims and objectives originally set out and
+    discusses the specific features that will need to be implemented going
+    forward.
 \end{description}
 
 \clearpage
@@ -526,7 +523,7 @@ debugging, formatting, source code analyses, profiling and much more.
 
     The main downside to this option, however, is that it is only supported on
     the Windows operating system. Therefore, it's not available on macOS or
-    Linux means that if the application will be cross-platform then other
+    Linux meaning that if the application will be cross-platform then other
     tools will be required.
 
   \item[Microsoft Visual Studio Code] Is a light and open-source text editor
@@ -598,16 +595,16 @@ compares each of these with specific types of functionality between the
   \label{fig:api_comparison}
 \end{figure}
 
-It shows that the Direct3D \glspl*{api} is not cross-platform and is only
+It shows that the Direct3D \glspl*{api} are not cross-platform and are only
 created to target Microsoft-backed operating systems such as Windows and Xbox.
 On the other hand, OpenGL and \gls*{vulkan} are designed according to their
-specifications to run on different platforms from the group up.
+specifications to run on different platforms.
 
 \subsection{External Libraries}
 The use of external libraries is vital in allowing \gls*{vmve} to be implemented
 within the short timeframe allocated. Libraries provide functionality that the
 application can easily incorporate without the need to implement the same
-solution from the group up.
+solution from scratch.
 
 \subsubsection{Model Loading}
 - Assimp, tinygltf, tinyobj
@@ -622,41 +619,48 @@ cereal, boost
 \subsection{Task Management}
 Task management refers to the use of tools to aid in managing tasks or issues.
 Various tools are designed for this purpose however, there are two that are the most
-well-known which are Trello and GitHub Projects.
+well-known which are Trello and GitHub Projects also known as GitHub issues.
 
-GitHub as well as providing hosting for the repository also provides different
-features related to task management. One such feature is known as GitHub issues.
+The Trello platform was developed before GitHub Projects. It also provides far
+more features that can be used to better manage the project and the various
+tasks that will be created throughout the development process. On the other
+hand, GitHub Projects is much more integrated into the GitHub ecosystem making
+it far easier to incorporate GitHub issues as tasks and also for the project
+repository as a whole.
 
 \clearpage
-\section{Design} \label{design} The design of the project consists of selecting
-the specific tools which will be used throughout the development as well as the
-design of the software and overall architecture.
+\section{Design} \label{design} 
+The design of the project consists of selecting the specific tools discussed in
+the technology review \ref{technology_review} and the architectural design
+decisions for both the source code and front end of the application.
 
 \subsection{Tools}
-\subsubsection{Git/GitHub} \label{project_management} 
+\subsubsection{Git/GitHub} \label{project_management}
+
 The \gls*{vcs} that was chosen for this project was Git including the GitHub
-platform \cite{gitvcs}. It's the most popular version control system and is the
-platform that I am most familiar with. Additionally, the performance benefits
-that it provides over similar systems are ideal for this type of project.
-Appendix section \ref{github} provides additional information regarding the
-technical details of how the repository is hosted on GitHub.
+platform \cite{gitvcs}. It's the most popular version control system as
+mentioned and is the platform that I am most familiar with. Additionally, the
+performance benefits that it provides over similar systems are ideal for this
+type of project. Appendix section \ref{github} provides additional information
+regarding the technical details of how the repository is hosted on GitHub.
 
 \subsubsection{GitHub Projects}
-This will be used as the task tracker in which ``posts'' are created that would
-track outstanding tasks including the priority, current progress and the
-expected deadline. Figure \ref{fig:kanban_design} shows a preview of the Kanban
-board. It consists of three main columns used to categorise an issue including
-backlog, in progress and done. 
+Having evaluated the pros and cons of both Trello and GitHub Projects, the
+decision was made to use GitHub as the platform for task management/tracking.
+``posts'' are created that would track outstanding tasks including the priority,
+current progress and the expected deadline. Figure \ref{fig:kanban_design} shows
+a preview of the Kanban board. It consists of three main columns used to
+categorise an issue including backlog, in progress and done.
 
 When an idea for a new feature is formed or a bug within the application is
 discovered a GitHub issue is created and moved to the ``Backlog'' board. This is
 used to document a particular task that needs to be worked on within a desired
 timeframe.
 
-Then once a specific issue is ready to be worked on/resolved, it's moved to the
+Then, once a specific issue is ready to be worked on/resolved, it's moved to the
 ``In Progress'' board. As the issue is being addressed, key points of discussion
 are added as comments to the issue for documentation purposes and to be referred
-back to.
+back to within commits or merges.
 
 Lastly, once the task has been completed, the GitHub commit that includes the
 specific fix is referenced in the issue and is then finally marked as complete
@@ -669,37 +673,36 @@ closed.
   \label{fig:kanban_design}
 \end{figure}
 
+Overall, this organisation and management of tasks allow the project to meet key
+sprints and deadlines and allow for issues to be resolved within a suitable
+timeframe.
+
 \subsubsection{Microsoft Visual Studio 2022} \label{development_environment}
 Out of the proposed development environments, Microsoft Visual Studio 2022 was
 chosen. This is primarily because of the vast amount of features and
-functionality that it provides compared to the other tools.
-
-An additional tool will be used in conjunction with Visual Studio that will
-further improve the ease of development such as Visual Studio Assist X
-\cite{visualstudioassistx}. This is an extension that provides many useful
-features that the base \gls*{ide} does not provide such as reliable symbol
-renaming, file symbol outlining, quick file searching and much more.
-
-
+functionality that it provides compared to the other tools. Additionally, in
+conjunction with Visual Studio, Visual Studio Assist X will be used to further
+improve the ease of development cite{visualstudioassistx}. This is an extension
+that provides many useful features that the base \gls*{ide} does not provide
+such as reliable symbol renaming, file symbol outlining and quick file
+searching.
 
 \subsubsection{RenderDoc}
 As well as using software for debugging on the \gls*{cpu}, there also exists
-software that allows for debugging the \gls*{gpu}. More specifically, these tools
-allow for analysing per-frame data as well as detailed frame synchronisation
-metrics.
-
-RenderDoc developed by Baldur Karlsson can be used to inspect different
-rendering \glspl*{api} including individual frames and the entire state
-\cite{renderdoc}. This ensures that you can debug specific \gls*{gpu} related
-bugs such as model data, textures, rendering commands etc.
-
+software that allows for debugging the \gls*{gpu}. More specifically, these
+tools allow for analysing per-frame data as well as detailed frame
+synchronisation metrics. RenderDoc developed by Baldur Karlsson can be used to
+inspect different rendering \glspl*{api} including individual frames and its
+entire state \cite{renderdoc}. This ensures that you can debug specific
+\gls*{gpu} related bugs such as model data, textures, rendering commands etc.
 
 \subsubsection{AMD Radeon GPU Profiler}
 Similarly to RenderDoc, AMD has its own \gls*{gpu} profiling tool called ``AMD
 Radeon GPU Profiler'' \cite{rgp}. This tool is only available for AMD-supported
 \glspl*{gpu} which is ideal as the hardware going to be used throughout
-development meets this requirement. The tool analyses per-frame data which
-subsequently provides insightful performance metrics.
+development meets this requirement. The tool also analyses per-frame data,
+however, contains more technical and detailed metrics such as command buffers,
+fences and semaphores between frames and also validates \gls*{api} usage.
 
 % \begin{figure}[H]
 %   \centering
@@ -710,23 +713,18 @@ subsequently provides insightful performance metrics.
 
 
 \subsubsection{C++ 23}
-The application needs certain requirements to be met regarding performance. For
-example, the application must use a high-performing programming language, allows
-for low-level memory access and can be compiled into an executable.
-
 The language chosen for this project was C++ and more specifically version 23.
-There were two main reasons why this specific programming language was chosen.
-Firstly, it's the language that as a programmer I have the most experience with
-which will significantly help during the implementation stages of the project.
-Secondly, the \gls*{stl} was one of the key reasons why C++ will be used. It
-provides many prebuilt data structures, containers and algorithms including
-``std::vector'', ``std::string'' and ``std::find'' to name a few. Furthermore,
-it saves time as it eliminates the need to implement a custom solution in the
-limited time frame for this project. Other language features that confirmed the
-programming language was suitable include function overloading, templates,
-compile-time expressions, direct memory access and generally faster performance
-compared to higher-level languages discussed in section
-\ref{programming_language}.
+There were two main reasons why this specific programming language was chosen
+instead of C or Rust. Firstly, it's the language that as a programmer I have the
+most experience with which will significantly help during the implementation
+stages of the project. Secondly, the \gls*{stl} was one of the key reasons why
+C++ was chosen. It provides many prebuilt data structures, containers and
+algorithms such as ``std::vector'', ``std::string'' and ``std::find'' to name a
+few. Furthermore, it saves time as it eliminates the need to implement a custom
+solution in the limited time frame for this project. Other language features
+that confirmed the programming language was suitable included function
+overloading, templates, compile-time expressions, direct memory access and
+generally faster performance compared to other languages.
 
 \subsubsection{Vulkan} \label{rendering_api}
 Having evaluated the potential use of the different \glspl*{api} covered in
@@ -738,11 +736,12 @@ as opposed to the underlying driver provided by major \gls*{gpu} vendors. This
 reduces the complexity of the display driver and can potentially increase
 performance as it no longer needs to make assumptions about the application and
 the commands being issued as the entire state of the rendering pipeline is
-predefined. Using \gls*{vulkan} also implicitly helps understand the complex
-inner workings of graphics development and work with the \gls*{gpu}.
-Furthermore, Figure \ref{fig:api_comparison} shows that the \gls*{api} provides
-the most amount of functionality including the ability to run on different
-operating systems, finer rendering control and support for multithreading.
+predefined. \gls*{vulkan} was also chosen as the technology allows one to learn
+and understand the complex inner workings of graphics applications and pipelines
+as well as \gls*{gpu} computation. Furthermore, Figure \ref{fig:api_comparison}
+shows that the \gls*{api} provides the most amount of functionality including
+the ability to run on different operating systems, finer rendering control and
+support for multithreading.
 
 \begin{figure}[H]
   \centering
@@ -787,9 +786,8 @@ efficient data serialisation into different formats such as compact binary
 encodings, XML or JSON.
 
 \subsubsection{Summary}
-Having compared the various external libraries proposed, a complete list of the
-libraries that will be used in \gls*{vmve} is listed in figure
-\ref{fig:library_versions}.
+Several other external libraries were used which are shown in figure
+\ref{fig:library_versions}. 
 
 \begin{figure}[H]
   \begin{center}
@@ -812,18 +810,20 @@ libraries that will be used in \gls*{vmve} is listed in figure
 \subsection{Branding}
 The branding i.e. the look of the application was an important factor during the
 design as it will be presented to users and can directly influence the user
-experience. Furthermore, being recognisable results in an increase in brand
-recognition that may also increase user traffic.
+experience. Additionally, Being recognisable results in an increase in brand
+recognition that may also increase user traffic as found in a 2013 paper titled
+\textit{The role of logos in building brand awareness and performance:
+implications for entrepreneurs} \cite{girard2013role}.
 
 \subsubsection{Project Name}
-VMVE stands for ``Vulkan Model Viewer and Exporter''. The name is made up of
-two parts. The first is ``Vulkan'' the other is ``Model Viewer and Exporter''.
-The rendering \gls*{api} used to render 3D digital assets is \gls*{vulkan} and
-hence the first part of the name. The second part is because the application
-will include functionality such as importing and exporting models into a custom
-file format as mentioned in section \ref{custom_file_format}. The combination of
+VMVE stands for ``Vulkan Model Viewer and Exporter''. The name is made up of two
+parts. The first is ``Vulkan'' the other is ``Model Viewer and Exporter''. The
+rendering \gls*{api} used to render 3D digital assets is \gls*{vulkan} and hence
+the first part of the name. The second part is because the application will
+include functionality such as importing and exporting models into a custom file
+format as mentioned in section \ref{custom_file_format}. The combination of
 these two allows a user to have a basic understanding of what the application
-does without having used it before.
+does without having used it before which is also known as a descriptive logo.
 
 \subsubsection{Logo}
 There are two versions of the \gls*{vmve} logo that was designed and intended to
@@ -1916,7 +1916,14 @@ differentiating between \gls*{vmve} releases. Each new version of the applicatio
 comes with new features as well as bug fixes that aim to improve the software
 over time. Due to the rapid development of new features and functionality,
 backward compatibility cannot be guaranteed. The current official release of
-\gls*{vmve} is v0.0.4.
+\gls*{vmve} is v0.0.3.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{images/vmve_release.png}
+  \caption{Latest release}
+  \label{fig:latest_release}
+\end{figure}
 
 \subsubsection{Website}
 Alongside the application, a website was created as a platform for easily
@@ -1998,7 +2005,6 @@ stuttering.
   \label{fig:multiple_systems}
 \end{figure}
 
-
 During this part of development, the decision was made to design the logging
 system so that all messages in the buffer would be stored and written to disk
 before exiting. This allowed for unexpected crashes to be better understood as
@@ -2015,24 +2021,26 @@ a highly effective tool throughout development regarding management and
 distributing tasks. Over 50 different GitHub issues have been resolved such as
 small user interface issues, implementation bugs and major structural changes.
 
-- How effective was the use of project management tools
-during development.
-- Key stages of the project
-    - Initial core systems/graphics development stage
-    - System redesign
-    - Encryption development stage
-
+Figure \ref{fig:commit_history} shows that a total of 357 commits were made over
+the course of eight months. This includes the design and implementation stages
+of the application.
 \begin{figure}[H]
   \centering
-  \includegraphics[width=\textwidth]{images/github_project.png}
-  \caption{GitHub Issues Kanban}
-  \label{fig:github_kanban}
+  \includegraphics[width=\textwidth]{images/commit_history.png}
+  \caption{Commit history}
+  \label{fig:commit_history}
 \end{figure}
     
 \gls*{vmve} currently has 32 outstanding GitHub issues that have yet to be
 resolved. These issues are not considered critical and do not hinder the project
 in terms of meeting its original requirements. However, they are notable and
 should be resolved soon.
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{images/github_project.png}
+  \caption{GitHub Issues Kanban}
+  \label{fig:github_kanban}
+\end{figure}
 
 % \subsubsection{Hardware}
 These tests were performed on the main development machine used throughout the
