--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -206,13 +206,13 @@
 
 @misc{unity,
   title  = {Unity},
-  author = {Unity Technologies},
+  author = {{Unity Technologies}},
   url    = {https://unity.com/}
 }
 
 @misc{unreal_engine,
   title  = {Unreal Engine},
-  author = {Epic Games},
+  author = {{Epic Games}},
   url    = {https://www.unrealengine.com/en-US/}
 }
 
@@ -257,4 +257,14 @@
   month  = {5},
   day    = {4},
   url    = {https://registry.khronos.org/vulkan/specs/1.3/html/vkspec.html}
+}
+
+@article{girard2013role,
+  title={The role of logos in building brand awareness and performance: Implications for entrepreneurs},
+  author={Girard, Tulay and Anitsal, M Meral and Anitsal, Ismet},
+  journal={The Entrepreneurial Executive},
+  volume={18},
+  pages={7},
+  year={2013},
+  publisher={Jordan Whitney Enterprises, Inc}
 }
